Fix height carrousel on mobiles

--- a/src/components/Carrousel/Carrousel.css
+++ b/src/components/Carrousel/Carrousel.css
@@ -22,14 +22,9 @@ h2 {
 .image-container {
   position: relative;
   width: 100%;
-  /* display: flex;
-  align-items: center;
-  justify-content: center;
-  max-width: 1200px;
-  margin: 0 auto; */
   overflow: hidden;
-  /* border-radius: 1rem; */
-  /* background-color: #fff; */
+  display: flex ;
+  justify-content: center;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.08);
   height: 100%;
 }
@@ -38,7 +33,6 @@ h2 {
   max-width: 100%;
   max-height: 100%;
   width: 100%;
-  /* border-radius: 0.75rem; */
   object-fit: cover;
   transition: opacity 0.5s ease, transform 0.5s ease;
 }
@@ -49,7 +43,6 @@ img.hidden {
 
 img.block {
   display: block;
-  /* animation: fadeIn 0.6s ease; */
 }
 
 @keyframes fadeIn {
@@ -113,7 +106,6 @@ img.block {
   background-color: #2c2b2ba5;
 }
 
-/* Estilos básicos para cada dot */
 .dot {
   width: 12px;
   height: 12px;
@@ -126,29 +118,32 @@ img.block {
   transition: background-color 0.3s ease;
 }
 
-/* Estilos para el dot activo */
 .dot.active {
   background-color: #171717; /* Color activo */
 }
 
-/* Opcional: Estilo de hover para mejor UX */
 .dot:hover:not(.active) {
   background-color: #888;
 }
 
 
 .small-carrousel {
-  height: 400px; /* Alto más pequeño */
-  max-width: 500px; /* Ancho máximo limitado */
+  height: 400px; 
+  max-width: 500px; 
   box-shadow: none;
 }
 
-/* Ajuste fino para la imagen dentro del carrusel pequeño */
 .small-carrousel .image-container {
-  height: 100%; /* Asegura que el contenedor de la imagen tome el alto de la sección */
+  height: 100%; 
 }
 
 .small-carrousel .image-container img {
-  object-fit: cover; /* Opcional: para que la imagen completa se vea */
+  object-fit: cover; 
   height: 100%;
+}
+
+@media (max-width: 900px) { 
+  section {
+    max-height: 400px;
+  }
 }
